<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="io.github.vipinagrahari.epragati.ui.fragment.LoanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_principal"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_interest_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_interest_rate"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_loan_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_loan_duration"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset"

            />


        <Button
            android:id="@+id/btn_calculate_emi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calculate_emi"

            />

    </android.support.v7.widget.ButtonBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_installment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_top_margin"
            android:text="@string/label_installment" />

        <TextView
            android:id="@+id/text_installment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            tools:text="1200" />

        <TextView
            android:id="@+id/label_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_top_margin"
            android:text="@string/label_interest" />

        <TextView
            android:id="@+id/text_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            tools:text="1200" />

        <TextView
            android:id="@+id/label_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_top_margin"
            android:text="@string/label_total_payment" />

        <TextView
            android:id="@+id/text_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            tools:text="2400" />

    </LinearLayout>

</LinearLayout>
</ScrollView>
